# ryazon

./: Cargo.toml  README.md  TODO.md
.github/workflows/: release.yml
src/: bin.rs  constant.rs  lib.rs  main.rs
src/markov/: chain.rs  generation_opts.rs  mod.rs  opts.rs  training_opts.rs
src/misc/: constant.rs
src/ryazon/: args.rs  error.rs  mod.rs  output.rs
test_data/: iliad_array.json  iliad_obj.json  iliad_str.json
